--- a/slides/RTutorial_Uvod.tex
+++ b/slides/RTutorial_Uvod.tex
@@ -1,5 +1,5 @@
 % ================================================================
-\section{Prehľad}
+\section{O čom je tento kurz}
 % ================================================================
 \begin{frame}{Čo sa naučíte v tomto kurze}
 	\begin{block}{1. Používať R}
@@ -32,7 +32,7 @@
 % Outline
 % ================================================================
 
-\begin{frame}{Outline}
+\begin{frame}{Prehľad}
 \tableofcontents
 \end{frame}
 
