--- a/lecture_notes/notes_2021-12-06.md
+++ b/lecture_notes/notes_2021-12-06.md
@@ -12,8 +12,8 @@
 
 1. Kreslíme grafy, `code/R02_Vizualizacia1.Rmd`
 2. Importujeme dáta, `code/RTutorial_Import.Rmd`
-3. Analyzujeme importované dáta
-4. Ak stihneme: masírujeme dáta do tvaru, vhodného pre analýzu.
+3. Analyzujeme importované dáta - tamže
+4. Masírujeme dáta do tvaru, vhodného pre analýzu, `code/RTutorial_wrangle.Rmd`
 
 
 
